--- a/views/about.html
+++ b/views/about.html
@@ -1,6 +1,7 @@
-<%- include("./_header.html") -%>
+<%- include('./_header.html') -%>
+<!-- ======================================================================= -->
 
-<h1>Qui sommes nous</h1>
+    <h1>Qui sommes nous</h1>
 
-
-<%- include("./_footer.html") -%>
+<!-- ======================================================================= -->
+<%- include('./_footer.html') -%>
