--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include('./_header.html') -%>
 
-    <header class="main-header">
-        <nav>
-            <a href="/">Home</a>
-            <a href="/contact">Contact</a>
-            <a href="/about">Qui sommes-nous</a>
-            <a href="/books">Books</a>
-        </nav>
-    </header>
+<!-- ======================================================================= -->
 
     <h1>Hello HTML</h1>
 
     Username: <%= username %>
-</body>
-</html>
+
+    <hr>
+
+    <% for (let fruit of fruits) { %>
+    <div>
+        <strong>Fruit : </strong> <%= fruit %>
+    </div>
+    <% } %>
+
+<!-- ======================================================================= -->
+
+<%- include('./_footer.html') -%>
